--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -8,17 +8,17 @@
         xmlns:helpers="clr-namespace:Compiler.Helpers"
         mc:Ignorable="d"
         Icon="/Icons/go.ico"
-        Title="Создание функции языка Go" Height="450" Width="800">
+        Title="Создание функции языка Go" Height="450" Width="800" FontFamily="Arial">
 
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
-    
-    
-    <Grid>
+
+
+    <Grid Background="#3FF1DCDC">
         <DockPanel>
             <!-- Главное меню -->
-            <Menu DockPanel.Dock="Top">
+            <Menu DockPanel.Dock="Top" Background="#3FF1DCDC" Foreground="#FF514E6F">
                 <MenuItem Header="Файл">
                     <MenuItem Header="Создать" Command="{Binding NewDocumentCommand}" />
                     <MenuItem Header="Открыть" Command="{Binding OpenDocumentCommand}" />
@@ -53,7 +53,7 @@
             </Menu>
 
             <!-- Панель инструментов -->
-            <ToolBar DockPanel.Dock="Top">
+            <ToolBar DockPanel.Dock="Top" Background="#ffe2e2">
                 <Button Command="{Binding NewDocumentCommand}">
                     <Image Source="/Icons/addFile.png" Width="16" Height="16"/>
                 </Button>
@@ -127,19 +127,21 @@
                                 VerticalScrollBarVisibility="Auto"
                                 HorizontalScrollBarVisibility="Auto"
                                 Padding="5"
+                                TextChanged="RichTextBox_TextChanged"
                                 helpers:RichTextBoxHelper.BoundDocument="{Binding Document}"/>
                         </DataTemplate>
                     </TabControl.ContentTemplate>
                 </TabControl>
 
                 <!-- Разделитель -->
-                <GridSplitter Grid.Row="1" Height="5" Background="Gray" HorizontalAlignment="Stretch"/>
+                <GridSplitter Grid.Row="1" Height="3" Background="#8785a2" HorizontalAlignment="Stretch"/>
 
                 <DataGrid ItemsSource="{Binding Errors}"
                     AutoGenerateColumns="False"
                     Grid.Row="2"
                     SelectionMode="Single"
-                    IsReadOnly="True">
+                    IsReadOnly="True"
+                    Background="#7FF3E0E0">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="№" Binding="{Binding Number}" Width="40"/>
                         <DataGridTextColumn Header="Файл" Binding="{Binding FileName}" Width="150"/>
