Исправлен баг - не работали команды горячих клавиш. Возможно из-за этого не работал и перенос курсора.

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -127,6 +127,7 @@
                                 VerticalScrollBarVisibility="Auto"
                                 HorizontalScrollBarVisibility="Auto"
                                 Padding="5"
+                                Loaded="RichTextBox_Loaded"
                                 TextChanged="RichTextBox_TextChanged"
                                 helpers:RichTextBoxHelper.BoundDocument="{Binding Document}"/>
                         </DataTemplate>
