Вроде все работает, но не работают горячие клавиши копировать и вставить и т.п.

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,15 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Compiler"
         xmlns:vm="clr-namespace:Compiler.ViewModel"
-        xmlns:helpers="clr-namespace:Compiler.Helpers"
+        xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
         mc:Ignorable="d"
+        xmlns:helpers="clr-namespace:Compiler.Helpers"
         Icon="/Icons/go.ico"
         Title="Создание функции языка Go" Height="450" Width="800" FontFamily="Arial">
 
     <Window.DataContext>
         <vm:MainViewModel />
     </Window.DataContext>
-
 
     <Grid Background="#3FF1DCDC">
         <DockPanel>
@@ -92,7 +92,6 @@
                 </Button>
             </ToolBar>
 
-
             <!-- Главный контейнер -->
             <Grid DockPanel.Dock="Top">
                 <Grid.RowDefinitions>
@@ -103,15 +102,15 @@
 
                 <!-- Вкладки с документами -->
                 <TabControl ItemsSource="{Binding DocumentsVM.OpenDocuments}" 
-                SelectedItem="{Binding DocumentsVM.SelectedDocument}"
-                Grid.Row="0">
+                            SelectedItem="{Binding DocumentsVM.SelectedDocument}"
+                            Grid.Row="0">
                     <TabControl.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="{Binding FileName}" Margin="5,0"/>
                                 <Button Background="Transparent" BorderThickness="0"
-                                    Command="{Binding DataContext.DocumentsVM.CloseDocumentCommand, RelativeSource={RelativeSource AncestorType=TabControl}}" 
-                                    CommandParameter="{Binding}">
+                                        Command="{Binding DataContext.DocumentsVM.CloseDocumentCommand, RelativeSource={RelativeSource AncestorType=TabControl}}" 
+                                        CommandParameter="{Binding}">
                                     <Image Source="/Icons/close.png" Width="16" Height="16"/>
                                 </Button>
                             </StackPanel>
@@ -120,16 +119,16 @@
 
                     <TabControl.ContentTemplate>
                         <DataTemplate>
-                            <RichTextBox FontFamily="Consolas"
-                                BorderThickness="0"
-                                FontSize="14"
-                                AcceptsReturn="True"
-                                VerticalScrollBarVisibility="Auto"
-                                HorizontalScrollBarVisibility="Auto"
-                                Padding="5"
-                                Loaded="RichTextBox_Loaded"
-                                TextChanged="RichTextBox_TextChanged"
-                                helpers:RichTextBoxHelper.BoundDocument="{Binding Document}"/>
+                            <avalonEdit:TextEditor x:Name="avalonEditor"
+                                  FontFamily="Consolas"
+                                  FontSize="14"
+                                  ShowLineNumbers="True"
+                                  VerticalScrollBarVisibility="Auto"
+                                  HorizontalScrollBarVisibility="Auto"
+                                  Padding="5"
+                                  helpers:AvalonEditHelper.Text="{Binding TextContent, UpdateSourceTrigger=PropertyChanged}"
+                                  Loaded="TextEditor_Loaded"
+                                  TextChanged="TextEditor_TextChanged"/>
                         </DataTemplate>
                     </TabControl.ContentTemplate>
                 </TabControl>
@@ -138,11 +137,11 @@
                 <GridSplitter Grid.Row="1" Height="3" Background="#8785a2" HorizontalAlignment="Stretch"/>
 
                 <DataGrid ItemsSource="{Binding Errors}"
-                    AutoGenerateColumns="False"
-                    Grid.Row="2"
-                    SelectionMode="Single"
-                    IsReadOnly="True"
-                    Background="#7FF3E0E0">
+                          AutoGenerateColumns="False"
+                          Grid.Row="2"
+                          SelectionMode="Single"
+                          IsReadOnly="True"
+                          Background="#7FF3E0E0">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="№" Binding="{Binding Number}" Width="40"/>
                         <DataGridTextColumn Header="Файл" Binding="{Binding FileName}" Width="150"/>
@@ -151,11 +150,7 @@
                         <DataGridTextColumn Header="Сообщение" Binding="{Binding Message}" Width="*" />
                     </DataGrid.Columns>
                 </DataGrid>
-
-
             </Grid>
-
-
         </DockPanel>
     </Grid>
 </Window>
