Сделала диалоговое окно при попытке закрыть несохранный файл

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         xmlns:helpers="clr-namespace:Compiler.Helpers"
         Icon="/Icons/go.ico"
-        Title="Создание функции языка Go" Height="450" Width="800" FontFamily="Arial">
+        Title="Создание функции языка Go" Height="450" Width="800" FontFamily="Arial" Closing="Window_Closing">
 
     <Window.DataContext>
         <vm:MainViewModel />
