Добавлен переход к ошибке по дабл клику.

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -152,6 +152,7 @@
                           AutoGenerateColumns="False"
                           Grid.Row="2"
                           SelectionMode="Single"
+                          MouseDoubleClick="DataGrid_MouseDoubleClick"
                           IsReadOnly="True"
                           Background="#7FF3E0E0">
                     <DataGrid.Columns>
