--- a/Views/GramWindow.xaml
+++ b/Views/GramWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Compiler.Views"
         mc:Ignorable="d"
-        Title="GramWindow" Height="450" Width="800">
+        Title="Грамматика G[&lt;F&gt;]" Height="450" Width="800">
     <Grid Margin="20">
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <StackPanel HorizontalAlignment="Center">
